--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.7'
 	id 'io.spring.dependency-management' version '1.1.7'
+    id 'checkstyle'
+    id 'com.diffplug.spotless' version '8.0.0'
 }
 
 group = 'com.mephi.skillfactory.oop'
@@ -26,4 +28,22 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+checkstyle {
+    toolVersion = '10.9.0'
+    configDirectory = file("config/checkstyle")
+}
+
+spotless {
+    java {
+        target 'src/**/*.java'
+        eclipse().configFile('config/eclipse-java-formatter.xml')
+        trimTrailingWhitespace()
+        endWithNewline()
+    }
+}
+
+tasks.register('ciCheck') {
+    dependsOn 'spotlessCheck', 'check'
 }
